--- a/public/css/card.css
+++ b/public/css/card.css
@@ -7,20 +7,20 @@ body {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   font-family: 'Roboto', sans-serif;
   -webkit-transform: translateZ(0);
-          transform: translateZ(0);
+  transform: translateZ(0);
   font-weight: 400;
 }
 button {
@@ -33,7 +33,7 @@ button {
   position: relative;
   border-radius: 2px;
   overflow: hidden;
-  background-color: #fafafa;
+  background-color: rgb(250, 250, 250);
   height: 35%;
   width: 344px;
   -webkit-transition: all 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -46,7 +46,7 @@ button {
 .card__image {
   position: absolute;
   background-size: cover;
-  background-position: center bottom;
+  background-position: center 10%;
   background-repeat: no-repat;
   width: 100%;
   height: 100%;
@@ -75,17 +75,21 @@ button {
           user-select: none;
   font-size: 24px;
   color: #FFF;
-  margin: 0;
+  margin: .5em 0 16px 16px;
   position: absolute;
   left: 0;
-  right: 0;
-  padding: 0 16px;
+  right: auto;
+  background-color: rgba(12, 12, 12, 0.35);
+  padding: .1em;
   font-weight: 400;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   -webkit-transition: all 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: all 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  -webkit-box-shadow: 0px 0px 16px 1px rgba(12, 12, 12, 0.65);
+  -moz-box-shadow:    0px 0px 16px 1px rgba(12, 12, 12, 0.65);
+  box-shadow:         0px 0px 16px 1px rgba(12, 12, 12, 0.65);
 }
 .card__subtitle {
   -webkit-user-select: none;
@@ -126,7 +130,17 @@ button {
   -webkit-transition: width 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: width 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
   -webkit-transition: delay 0.1s;
-  transition: delay 0.1s;
+  background-color: rgba(250, 250, 250, .45);
+  -webkit-box-shadow: 0px 0px 16px 1px rgba(250, 250, 250, 0.65);
+  -moz-box-shadow:    0px 0px 16px 1px rgba(250, 250, 250, 0.65);
+  box-shadow:         0px 0px 16px 1px rgba(250, 250, 250, 0.65);
+}
+.card__content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 52px;
 }
 .card__action-bar {
   -webkit-user-select: none;
@@ -152,6 +166,22 @@ button {
   line-height: 52px;
   padding: 0 16px;
   color: #ff1744;
+}
+.card--full {
+  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
+  width: 100%;
+  min-height: 50vh;
+}
+.card--full .card__image {
+  border-radius: 1px 1px 0 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  opacity: 1;
+}
+.card--full .card__text {
+  top: auto;
+  bottom: 0;
 }
 .card--big {
   box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
