--- a/public/css/card.css
+++ b/public/css/card.css
@@ -1,6 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,700,300);
-body {
-  height: 100vh;
+.content-wrapper {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -68,17 +67,24 @@ button {
   transition: all 500ms;
   bottom: 0;
 }
-.card__title {
+.card-title {
+  position: absolute;
+  left: 0;
+  right: auto;
+  margin: 0;
+  padding: 0;
+}
+.card__title a {
+  position: relative;
+  width: 100%;
+  height: 100%;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+          margin: .5em 0 16px 16px;
   font-size: 24px;
   color: #FFF;
-  margin: .5em 0 16px 16px;
-  position: absolute;
-  left: 0;
-  right: auto;
   background-color: rgba(12, 12, 12, 0.35);
   padding: .1em;
   font-weight: 400;
@@ -184,6 +190,7 @@ button {
   bottom: 0;
 }
 .card--big {
+  display: inline-block;
   box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
   height: 304px;
   min-height: 304px;
