--- a/public/css/card.css
+++ b/public/css/card.css
@@ -165,6 +165,9 @@ button {
   -webkit-transition: left 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: left 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+.card__action-bar form {
+  display: inline;
+}
 .card__button {
   outline: none;
   position: relative;
